hphp/hack/test/typecheck/fun_contra_bad.php.exp
File "fun_contra_bad.php", line 8, characters 11-12:
Invalid argument (Typing[4110])
File "fun_contra_bad.php", line 7, characters 25-27:
This is an int
File "fun_contra_bad.php", line 4, characters 28-35:
It is incompatible with an array key (int/string)
